/*
 * $Id: ChangeLog,v 1.958 2003/04/16 10:15:17 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-04-17 00:05 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/trpc.prg
  * source/rtl/trpccli.prg
    % The RPC Syntax has been highly simplified on server side,
      Now the RPC function needs not to have been derived by
      the tRPCFunction class, but is just an executable object
      called by a HB_ExecFromArray() call. Also, while previous
      model required a special parameter decoding to be carried
      by RPC Function, in current model you can register any
      function, method or codeblock to be executed by the RPC
      server, with normal XHarbour parameter conventions.
      Finally, RPC function definitions (useful to send over
      internet what functions you have and what do they do)
      are now identical to canonical syntax defs in clipper,
      like i.e. MyFunc( C:10, A, NI ) --> L

  * tests/rpcserver.prg
    ! Server thest has been updated to reflect this change


2003-04-16 12:14 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/filesys.c
    ! convert_create_flags is now doing a more sensible work under unix.
      Default (FO_NORMAL) is translated into 666 (rw-rw-rw);
      FO_READONLY creates a r--r--r--, while FO_HIDDEN allows only the
      creator user to see (rw- or r--, depending on FO_READONLY) the
      file.
      Finally, FO_SYSTEM gives X attribute to all the fields with R
      attribute (e.g. r--r--r-- becomes r-xr-xr-x, and rw------- becomes
      rwx------).

      WARNING: convert_create_flags_ex has not been changed.

2003-04-16 10:35 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/trpc.prg
    + Added support for "O" object parameter defintion in RPC class
