@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.958 2003/04/16 10:15:17 jonnymind Exp $
+ * $Id: ChangeLog,v 1.959 2003/04/16 22:08:05 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-04-17 05:25 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
+  * makefile.nt
+    * synchronise with makefile.vc
+  * source/rtl/hbsrlraw.c
+    * casts for msvc and for comparing singed to unsigned
+  * source/vm/macro.c
+    * casts for msvc
 
 2003-04-17 00:05 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
   * source/rtl/trpc.prg
